Fix: Frame for @LargeDisplay properties is too close to the above frame, touching it

--- a/openxava/src/main/resources/META-INF/resources/xava/style/base.css
+++ b/openxava/src/main/resources/META-INF/resources/xava/style/base.css
@@ -3035,13 +3035,12 @@ a[data-action="Collection.previous"] {
 	display: flex;
 	justify-content: center;
 	align-items: baseline;
-	flex-wrap: wrap;	
 }
 
-/* TMR ME QUEDÉ POR AQUÍ. INTENTANDO AJUSTAR TAMAÑO DE LA ETIQUETA */
-.ox-large-display .small-label {
-	flex-basis: 100%;
-	font-size: initial;
+.ox-large-display-label {
+	margin-top: 13px;
+	margin-left: 5px;
+	font-weight:  bold;
 }
 
 .firefox .ox-large-display {
